rama-utils/tests/include_dir_no_compile/relative_dir_not_found.rs
use ::rama_utils::include_dir::{Dir, include_dir};

static _ASSETS: Dir = include_dir!("./foo");

fn main() {}
